infrastructure/local/k8s/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: stage-le-issuer
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - prometheus.example.com
    secretName: prometheus-secret
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
